--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
         <ol class="px-4 text-light py-1 btn" routerLink="/about">About</ol>
         <ol class="px-4 text-light py-1 btn" routerLink="/">Shop</ol>
         <ol class="px-4 text-light py-1 tbn" routerLink="/">Help</ol>
-        <ol class="px-4 text-light py-1"><div class="btn btn-dark"><i class="bi bi-cart2 "></i> Your cart</div></ol>
+        <ol class="px-4 text-light py-1" routerLink="/cart"><div class="btn btn-dark" ><i class="bi bi-cart2 "></i> Your cart</div></ol>
       </ul>
     </div>
   </nav>
