--- a/src/app/modules/about/components/description-card/description-card.component.html
+++ b/src/app/modules/about/components/description-card/description-card.component.html
@@ -1,9 +1,9 @@
-<div class="bg-primary p-3 h-100 rounded m-auto text-light">
-  <div class="h-50">
+<div class="bg-primary p-3 h-100 rounded text-light">
+  <div class="h-50 w-100">
     <img src="{{ cardDescription.img }}" alt="img" class="w-100 h-100 rounded-top" />
   </div>
   <div class="h-50 pt-3">
     <h3>{{ cardDescription.title }}</h3>
-    <p>{{ cardDescription.descrition }}</p>
+    <p>{{ cardDescription.description }}</p>
   </div>
 </div>
