--- a/src/app/modules/about/components/about-section/about-section.component.html
+++ b/src/app/modules/about/components/about-section/about-section.component.html
@@ -2,9 +2,9 @@
   <div class=" d-flex justify-content-center p-3 pb-5">
     <h2>About us</h2>
   </div>
-  <div class="d-flex flex-lg-row flex-column justify-content-between gap-4">
+  <div class="d-flex flex-lg-row flex-column justify-content-between">
     <div *ngFor="let card of cardAbout">
-      <app-description-card [cardDescription]="card" class="d-flex"></app-description-card>
+      <app-description-card [cardDescription]="card" class="d-flex h-100 p-4"></app-description-card>
     </div>
   </div>
 </div>
