--- a/src/app/modules/product/components/detail-product/detail-product.component.html
+++ b/src/app/modules/product/components/detail-product/detail-product.component.html
@@ -31,4 +31,9 @@
       <i class="bi bi-trash3"></i>
     </div>
   </div>
+  <div class="c-product__buy">
+    <div class="btn btn-primary" (click)="onAddToCart(product)">
+      <span>Add to cart</span>
+    </div>
+  </div>
 </div>
