--- a/src/app/modules/product/pages/detail/product.component.html
+++ b/src/app/modules/product/pages/detail/product.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="PRODUCTS.length">
   <div class="row">
     <div class="col-12 col-md-3 p-0 m-0">
       <app-sidebar
@@ -14,6 +14,7 @@
         [product]="productInUse"
         (deleteProduct)="deleteProduct($event)"
         (changeFavorite)="changeFavorite($event)"
+        (addToCart)="addToCart($event)"
       ></app-detail-product>
       <app-similar-product-section
         [product]="productInUse"
