--- a/src/app/modules/product/components/sidebar/sidebar.component.html
+++ b/src/app/modules/product/components/sidebar/sidebar.component.html
@@ -16,5 +16,6 @@
         [ngClass]=""
       ></app-list-view-product>
     </div>
+    <button class="btn btn-primary" routerLink="/insert-product"> Add new Product</button>
   </div>
 </div>
