--- a/src/app/modules/product/components/detail-product/detail-product.component.html
+++ b/src/app/modules/product/components/detail-product/detail-product.component.html
@@ -1,6 +1,7 @@
 <div class="c-product c-product@tablet m-4 p-3">
   <img
     src="../assets/{{ product.id }}.png"
+    onerror='"../assets/default.png"'
     alt="product"
     class="c-product__img"
   />
