--- a/src/app/modules/product/pages/new-product-form/new-product-form.component.html
+++ b/src/app/modules/product/pages/new-product-form/new-product-form.component.html
@@ -139,7 +139,7 @@
         >
           Select similar:
           <div
-            *ngFor="let product of productsList; let position = index"
+            *ngFor="let product of productsList.products; let position = index"
             class="d-flex"
           >
             <div class="d-flex justify-content-center align-items-center">
