Added extension of product (similar and detail)

--- a/src/app/modules/product/pages/new-product-form/new-product-form.component.html
+++ b/src/app/modules/product/pages/new-product-form/new-product-form.component.html
@@ -145,7 +145,7 @@
             <div class="d-flex justify-content-center align-items-center">
               <input
                 type="checkbox"
-                (click)="setProductInSimilar(product)"
+                (click)="setProductInSimilar(transformIntoSimilar(product))"
                 class="form-check-input mx-2 border-dark"
               />
             </div>
