--- a/src/app/modules/product/components/detail-product/detail-product.component.html
+++ b/src/app/modules/product/components/detail-product/detail-product.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="c-product__stars">
     <app-stars-rating
-      [object]="product"
+      [rating]="product.rating"
     ></app-stars-rating>
   </div>
   <div class="c-product__favorite">
