--- a/src/app/modules/product/pages/detail/product.component.html
+++ b/src/app/modules/product/pages/detail/product.component.html
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-12 col-md-3 p-0 m-0">
       <app-sidebar
-        [productsList]="productsWithFilter.products"
+        [productsList]="productsWithFilter"
         (showProductPipe)="showProduct($event)"
         (changeFilterPipe)="applyFilter($event)"
         [filtersList]="filtersList"
         [activeFilter]="activeFilter"
       ></app-sidebar>
     </div>
-    <div class="col-12 col-md-9" [ngClass]="productInUse.favorite ? 'bg-secondary text-light' : ''">
+    <div class="col-12 col-md-9" *ngIf="productInUse" [ngClass]="productInUse.favorite ? 'bg-secondary text-light' : ''">
       <app-detail-product
         [product]="productInUse"
         (deleteProduct)="deleteProduct($event)"
