--- a/src/app/modules/product/components/filter-button/filter-button.component.html
+++ b/src/app/modules/product/components/filter-button/filter-button.component.html
@@ -1,6 +1,6 @@
 <div
   class="btn m-1 w-100"
-  (click)="onChangeFilter(filterType)"
+  (click)="onChangeFilter()"
   [ngClass]="isPicked ? 'btn-primary' : 'btn-secondary'"
 >
   Filter {{ filterType }}
