--- a/src/app/modules/product/components/detail-product/detail-product.component.html
+++ b/src/app/modules/product/components/detail-product/detail-product.component.html
@@ -20,7 +20,7 @@
     <i
       class="bi"
       [ngClass]="!product.favorite ? 'bi-heart' : 'bi-heart-fill text-danger'"
-      (click)="onFavorite(product)"
+      (click)="onFavorite()"
     ></i>
   </div>
   <div class="c-product__description">
@@ -28,12 +28,12 @@
     <hr class="w-25" />
   </div>
   <div class="c-product__delete">
-    <div class="btn btn-danger" (click)="onDeleteProduct(product)">
+    <div class="btn btn-danger" (click)="onDeleteProduct()">
       <i class="bi bi-trash3"></i>
     </div>
   </div>
   <div class="c-product__buy">
-    <div class="btn btn-primary" (click)="onAddToCart(product)">
+    <div class="btn btn-primary" (click)="onAddToCart()">
       <span>Add to cart</span>
     </div>
   </div>
