--- a/src/app/modules/product/components/list-view-product/list-view-product.component.html
+++ b/src/app/modules/product/components/list-view-product/list-view-product.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between align-items-center p-2 btn" (click)="listViewProductClicked(product)">
+<div class="d-flex justify-content-between align-items-center p-2 btn" (click)="onShowProduct()">
   <span>{{product.product}}</span> <span class="align-items justify-items-right"><i class="bi bi-chevron-compact-right"></i></span>
 </div>
 
