--- a/src/app/modules/product/pages/cart/cart.component.html
+++ b/src/app/modules/product/pages/cart/cart.component.html
@@ -9,7 +9,7 @@
       [cartEntry]="cartEntry"
       (addQuantity)="addQuantityCartEntry($event)"
       (substractQuantity)="substractQuantityCarEntry($event)"
-      (deleteCartEntity)="deleteCartEntry($event)"
+      (deleteProductFromCart)="deleteProductFromCart($event)"
     ></app-cart-list-view-product>
   </div>
   <div class="p-2 d-flex justify-content-end">
