--- a/src/app/modules/product/components/similar-product/similar-product.component.html
+++ b/src/app/modules/product/components/similar-product/similar-product.component.html
@@ -1,4 +1,4 @@
-<div class="c-similar-product c-similar-product@desktop" (click)="clickedShowProduct(similarProduct.id)">
+<div class="c-similar-product c-similar-product@desktop">
   <img src="../assets/{{similarProduct.id}}.png" alt="" class="c-similar-product__img">
   <span class="c-similar-product__title">{{similarProduct.product}}</span>
   <app-stars-rating [rating]="similarProduct.rating"></app-stars-rating>
